--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,42 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: green;
+}
+
+.carta {
+  background-color: white;
+  width: 300px;
+  height: 450px;
+  margin: auto;
+  margin-bottom: 5%;
+  border-radius: 15px;
+  margin-top: 10%;
+  padding: 0;
+}
+
+.cartaTop {
+  float: left;
+  font-size: 80px;
+  margin-top: -4%;
+  margin-left: 2%;
+  margin-bottom: 0;
+}
+
+.cartaNum {
+  margin: auto;
+  padding-top: 30%;
+  font-size: 150px;
+  margin-right: 18%;
+}
+
+.cartaBottom {
+  float: right;
+  font-size: 80px;
+  margin-right: 2%;
+  margin-top: 8%;
+}
+
+#buttons {
+  margin-left: 20%;
+}
